# axm-embodied

./: .gitignore  CHANGELOG.md  README.md  README_PHASE2_DEMO.md  README_SIM.md  RELEASE_MANIFEST.txt  RELEASE_NOTES_RC2.md  SECURITY.md  conftest.py  index.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml
capsule/: events.jsonl  meta.json
capsules_final/capsule-73e0d774/: events.jsonl  meta.json
capsules_final/capsule-a49af8a1/: meta.json
demo_crash/capsule-5130b536/: events.jsonl  meta.json
demo_safe/capsule-f9bed87c/: events.jsonl  meta.json
docs/: FRAME_CAPTURE_V0.md  RFC-0001-post-quantum-suite.md  RFC-001-heavy-evidence.md  SPECIFICATION.md
examples/: frame_capture_demo.py  query.py
governance/: README.md  local_policy.json  trust_store.json
scripts/: board_demo.sh  corrupt_one_byte.py  demo.sh
shard/: manifest.json
shard/evidence/: spans.parquet
shard/graph/: provenance.parquet
shard/sig/: manifest.sig
shard_out/: manifest.json
shard_out/evidence/: spans.parquet  streams.parquet
shard_out/graph/: claims.parquet  entities.parquet
shard_out/sig/: manifest.sig
shard_out_fail/graph/: provenance.parquet
shards/gold/embodied-demo-v1/: manifest.json
shards/gold/embodied-demo-v1/graph/: claims.parquet  entities.parquet
shards/gold/embodied-demo-v1/sig/: manifest.sig
spec/v1.0/: SPECIFICATION.md
src/axm_compile/: __init__.py  cli.py
src/axm_core/: ids.py
src/axm_embodied/: __init__.py  attest.py  bounds.py  compile.py  envelope.py  frame_capture.py  frame_compile.py  gate.py  keys.py  recorder.py  runtime.py  runtime_cli.py  sim.py  streams.py
src/axm_embodied_core/: __init__.py  ids.py  protocol.py
src/axm_embodied_genesis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/axm_verify/: cli.py  const.py  crypto.py  logic.py  merkle.py
tests/: conftest.py  test_attest.py  test_flight_recorder.py  test_frame_capture.py  test_phase2_pattern2.py  test_shadow_runtime.py
tools/: compile_bounds.py  compile_capsule.py  sim_robot.py  sim_robot_final.py
