[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axm-embodied"
version = "1.4.0"
description = "Physical liability spoke of the AXM ecosystem"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  # ── Hub dependency ────────────────────────────────────────────────────
  # All cryptography (blake3, pynacl, dilithium-py) comes transitively
  # from axm-core. Embodied does not own or version the math layer.
  "axm-core @ git+https://github.com/BigBirdReturns/axm-core.git@v1.1.0",

  # ── Embodied-specific ─────────────────────────────────────────────────
  # Heavy robotics/data deps that have no business in axm-core.
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "click>=8.0.0",
  "numpy>=1.24.0",
]

[project.scripts]
axm-bounds = "axm_embodied.bounds:main"
axm-compile = "axm_embodied.compile:main"
# axm-verify is provided by axm-genesis (transitive via axm-core)

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
