[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axm-embodied"
version = "2.1.0"
description = "Physical liability spoke of the AXM ecosystem: Flash Freeze flight recorder + Shadow Runtime envelope enforcement"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  # ── Kernel dependency ─────────────────────────────────────────────────
  # All cryptography (blake3, pynacl, ML-DSA-44) and all shard
  # construction/verification comes from the axm-genesis kernel. Embodied
  # does not own or version the math layer.
  # NOTE: pinned to the feature branch until the extra_content/streams@1
  # kernel additions merge; repin to a tagged release after that.
  "axm-genesis[mldsa-compat] @ git+https://github.com/BigBirdReturns/axm-genesis.git@claude/embodied-repo-flight-recorder-pg8x01",

  # ── Embodied-specific ─────────────────────────────────────────────────
  "numpy>=1.24.0",
  "click>=8.0.0",
]

[project.scripts]
axm-bounds = "axm_embodied.bounds:main"
axm-compile = "axm_embodied.compile:main"
axm-runtime = "axm_embodied.runtime_cli:main"
# axm-verify and axm-build are provided by axm-genesis

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
