[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axm-embodied"
version = "2.1.0"
description = "Physical liability spoke of the AXM ecosystem: Flash Freeze flight recorder + Shadow Runtime envelope enforcement"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  # ── Kernel dependency ─────────────────────────────────────────────────
  # All cryptography (blake3, pynacl, ML-DSA-44) and all shard
  # construction/verification comes from the axm-genesis kernel. Embodied
  # does not own or version the math layer.
  # Pinned to the v1 kernel commit that carries extra_content, the JSONL
  # streams@1 extension, and the embodied@1 profile continuity check (the
  # same commit the sibling spokes pin). After the v1.0.0 PyPI release this
  # moves to the range `axm-genesis[mldsa-compat]>=1.0.0,<2`.
  "axm-genesis[mldsa-compat] @ git+https://github.com/BigBirdReturns/axm-genesis.git@9074e7fb2e9cedde692b248cdd0c6a805e77d8ac",

  # ── Embodied-specific ─────────────────────────────────────────────────
  "numpy>=1.24.0",
  "click>=8.0.0",
]

[project.scripts]
axm-bounds = "axm_embodied.bounds:main"
axm-compile = "axm_embodied.compile:main"
axm-runtime = "axm_embodied.runtime_cli:main"
# axm-verify and axm-build are provided by axm-genesis

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
